--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.2.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "@types/node": "^15.6.0",
-    "@types/react": "^17.0.6",
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.3.0",
-    "tailwindcss": "^2.1.2",
-    "typescript": "^4.2.4"
-  }
+    "@types/node": "^17.0.36",
+    "@types/react": "^18.0.9",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.7.2"
+  },
+  "packageManager": "yarn@3.2.1"
 }
