--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "next-tailwind-ts",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.36",
-    "@types/react": "^18.0.9",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.7.2"
-  },
-  "packageManager": "yarn@3.2.1"
+	"name": "next-tailwind-ts",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"next": "12.2.5",
+		"nextkit": "^3.4.3",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@types/node": "^18.7.14",
+		"@types/react": "^18.0.18",
+		"autoprefixer": "^10.4.8",
+		"postcss": "^8.4.16",
+		"prettier": "^2.7.1",
+		"tailwindcss": "^3.1.8",
+		"typescript": "^4.8.2"
+	},
+	"packageManager": "yarn@3.2.1"
 }
