--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "next-tailwind-ts",
-	"version": "0.1.0",
+	"name": "react-template",
+	"version": "1.0.0",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -8,19 +8,20 @@
 		"start": "next start"
 	},
 	"dependencies": {
-		"next": "13.1.4",
+		"next": "13.1.6",
 		"nextkit": "^3.4.3",
 		"react": "18.2.0",
 		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
-		"@types/node": "^18.11.18",
+		"@types/node": "^18.13.0",
 		"@types/react": "^18.0.27",
 		"autoprefixer": "^10.4.13",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.3",
+		"prettier-plugin-tailwindcss": "^0.2.2",
 		"tailwindcss": "^3.2.4",
-		"typescript": "^4.9.4"
+		"typescript": "^4.9.5"
 	},
-	"packageManager": "yarn@3.3.1"
+	"packageManager": "yarn@3.4.1"
 }
